--- a/index.html
+++ b/index.html
@@ -3,50 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Natural Language NetworkManager Configuration Tool</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-            color: #333;
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 20px;
-            text-align: center;
-        }
-        .container {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-        h1 {
-            font-size: 24px;
-        }
-        p {
-            line-height: 1.6;
-            margin-bottom: 10px;
-        }
-    </style>
+    <title>Home Page</title>
 </head>
 <body>
     <header>
-        <h1>Natural Language NetworkManager Configuration Tool</h1>
+        <h1>Home Page</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
-    <div class="container">
-        <h2>Project Description</h2>
-        <p>Create a tool to use natural language to generate NetworkManager configuration.</p>
-        <p>NetworkManager is the standard Linux network configuration tool suite, supporting various networking setups across desktop, server, and mobile platforms. It integrates seamlessly with popular desktop environments and server configuration management tools.</p>
-        <p>Nmstate is a library and command-line tool that manages host networking settings in a declarative manner. The networking state is described by a predefined schema, facilitating reporting of current state and desired state changes.</p>
-        <p>Linux System Roles, a project related to Ansible, provides a consistent user interface for managing Linux subsystems. The Network Linux System Role offers a unified configuration interface for network-scripts and NetworkManager.</p>
-        <p>The internship project focuses on enhancing this ecosystem with AI capabilities to improve user experiences. The tool will allow users to describe network configurations in natural language, addressing challenges in finding appropriate options and syntax in configuration files.</p>
-        <p>The enhanced projects will provide user support through a text-based user interface (TUI) based on natural language prompts, simplifying configuration tasks.</p>
-    </div>
+    <main>
+        <!-- Content of the home page goes here -->
+        <p>Welcome to the nlp demo!</p>
+    </main>
 </body>
 </html>
